feat: the proper model files now load for the head and die, however the textures are not.