@@ -1,6 +1,7 @@
 package com.breakingfemme.data;
 
 import com.breakingfemme.BreakingFemme;
+import com.breakingfemme.mixin.VariantsBlockStateSupplierAccessor;
 import com.breakingfemme.registries.press.PressHead;
 import com.google.common.collect.ImmutableList;
 import net.minecraft.block.Block;
@@ -20,21 +21,28 @@ import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
 public abstract class PressModelProvider implements DataProvider {
-    private static final class PressModelVariantProvider extends VariantsBlockStateSupplier {
+    @Override
+    public CompletableFuture<?> run(DataWriter writer) {
+        this.registerVariants();
+        return CompletableFuture.allOf(variantMap.entrySet().stream().map(entry -> {
+            var head = entry.getKey();
+            var headIsHereVariantId = entry.getValue().headModelId == null ? emptyId : entry.getValue().headModelId();
+            var isDieVariantId = entry.getValue().dieModelId == null ? emptyId : entry.getValue().dieModelId();
 
-        PressModelVariantProvider(Block block, List<BlockStateVariant> variants) {
-            super(block, variants);
-        }
+            final BlockStateVariantMap.SingleProperty<Boolean> map = BlockStateVariantMap.create(PressHead.DIE);
+            map.register(
+                    false, List.of(BlockStateVariant.create().put(VariantSettings.MODEL, headIsHereVariantId))
+            );
 
-        public static VariantsBlockStateSupplier create() {
-            return new PressModelVariantProvider(null, ImmutableList.of(BlockStateVariant.create()));
-        }
+            map.register(
+                    true, List.of(BlockStateVariant.create().put(VariantSettings.MODEL, isDieVariantId))
+            );
+            final VariantsBlockStateSupplier variantSupplier = PressModelVariantProvider.create().coordinate(map);
+            var json = variantSupplier.get();
 
-        @Override
-        public PressModelVariantProvider coordinate(BlockStateVariantMap map) {
-            this.breakingfemme$getVariantMaps().add(map);
-            return this;
-        }
+            var path = blockstatesPathResolver.resolveJson(head.getId());
+            return DataProvider.writeToPath(writer, json, path);
+        }).toArray(CompletableFuture[]::new));
     }
 
     private final DataOutput.PathResolver blockstatesPathResolver;
@@ -53,28 +61,22 @@ public abstract class PressModelProvider implements DataProvider {
 
     abstract public void registerVariants();
 
-    @Override
-    public CompletableFuture<?> run(DataWriter writer) {
-        this.registerVariants();
-        return CompletableFuture.allOf(variantMap.entrySet().stream().map(entry -> {
-            var head = entry.getKey();
-            var headIsHereVariantId = entry.getValue().headModelId == null ? emptyId : entry.getValue().headModelId();
-            var isDieVariantId = entry.getValue().dieModelId == null ? emptyId : entry.getValue().dieModelId();
+    public static final class PressModelVariantProvider extends VariantsBlockStateSupplier {
 
-            final BlockStateVariantMap.SingleProperty<Boolean> map = BlockStateVariantMap.create(PressHead.DIE);
-            map.register(
-                    false, List.of(BlockStateVariant.create().put(VariantSettings.MODEL, headIsHereVariantId))
-            );
+        private PressModelVariantProvider(Block block, List<BlockStateVariant> variants) {
+            super(block, variants);
+        }
 
-            map.register(
-                    true, List.of(BlockStateVariant.create().put(VariantSettings.MODEL, isDieVariantId))
-            );
-            final VariantsBlockStateSupplier variantSupplier = PressModelVariantProvider.create(null).coordinate(map);
-            var json = variantSupplier.get();
+        public static VariantsBlockStateSupplier create() {
+            return new PressModelVariantProvider(null, ImmutableList.of(BlockStateVariant.create()));
+        }
 
-            var path = blockstatesPathResolver.resolveJson(head.getId());
-            return DataProvider.writeToPath(writer, json, path);
-        }).toArray(CompletableFuture[]::new));
+        @Override
+        public PressModelVariantProvider coordinate(BlockStateVariantMap map) {
+
+            ((VariantsBlockStateSupplierAccessor) (Object) this).breakingfemme$getVariantMaps().add(map);
+            return this;
+        }
     }
 
     public void registerHead(@NotNull PressHead head, @Nullable Identifier headModelId, @Nullable Identifier dieModelId) {
